Bug fix whitespace under multiple choice questions (clear both) Add re-pull from group on regen Bug fix color on regenonreattempt

--- a/assessment/mathtest.css
+++ b/assessment/mathtest.css
@@ -157,8 +157,10 @@ span.done {
 
 div.inset {
 	padding: 0px;
-	margin-left: 175px;
+	margin-left: 155px;
 	margin-right: 10px;
+	padding-left: 20px;
+	overflow: hidden;
 }
 
 div.right {
